[package]
name = "leetcode-1381-design-a-stack-with-increment-operation"
version = "0.1.0"
authors = ["Singee <git@singee.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pre_sum"]

brute_force = []
pre_sum = []

[dependencies]
